--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,26 @@
-version: "3.7"
+version: "2"
 
 services:
   nexus:
-    image: sonatype/nexus3
+    image: novinrepo:8082/docker/sonatype/nexus3
+    volumes:
+      - ./volume:/nexus-data
     expose:
       - 8081
       - 8082
       - 8083
+      #ports:
+      #- '8081:8081'
+      #- '8082:8082'
+      #- '8083:8083'
+    restart: always
+  nginx:
+    image: novinrepo:8082/docker/nginx:1.18
     ports:
-      - "8082:8082"
-      - "8083:8083"
-      - "8081:8081"
+      - '80:80'
+      - '443:443'
     volumes:
-      - ./volume:/nexus-data
+      - ./configs/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./configs/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./configs/secrets:/etc/nginx/ssl/
     restart: always
