--- a/configs/nginx/default.conf
+++ b/configs/nginx/default.conf
@@ -9,7 +9,7 @@ server {
 
 server {
     listen       443 ssl;
-    server_name  nexus.repository.ir;
+    server_name  nexus.repository.com;
  
     # Path to certs
     #ssl_certificate /etc/nginx/ssl/dockerrepo.tosanltd.com.crt;
