--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "2"
+version: "3.7"
 
 services:
   nexus:
-    image: novinrepo:8082/docker/sonatype/nexus3
+    image: sonatype/nexus3
     volumes:
       - ./volume:/nexus-data
     expose:
@@ -15,7 +15,7 @@ services:
       #- '8083:8083'
     restart: always
   nginx:
-    image: novinrepo:8082/docker/nginx:1.18
+    image: nnginx:1.18
     ports:
       - '80:80'
       - '443:443'
